Use item title in subnav, add status labels

--- a/content/v1/hl7/a19.md
+++ b/content/v1/hl7/a19.md
@@ -1,8 +1,5 @@
 ---
-title: A19 QRY | RoQua HL7 API
+title: HL7 2.4 QRY^A19 request
 ---
-
-HL7 A19 QRY request and A19 ADR response
-========================================
 
 TODO
